--- a/CollectionViewControllerProperty/Base.lproj/Main.storyboard
+++ b/CollectionViewControllerProperty/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="RO5-5o-HEq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="b6m-Ua-ZTt">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -20,7 +20,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TestCell" id="bXO-7O-X32">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -45,13 +45,14 @@
                             <outlet property="delegate" destination="RO5-5o-HEq" id="oTS-Fy-CdI"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="G3i-e6-j9d"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="modal" identifier="TestSegue" id="bqO-XO-F05"/>
+                        <segue destination="BYZ-38-t0r" kind="push" identifier="TestSegue" id="PEZ-7x-S19"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="act-Yt-tsJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-206" y="406"/>
+            <point key="canvasLocation" x="326" y="406"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -65,44 +66,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YDz-x6-c1l">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YDz-x6-c1l">
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAN-oz-v9v">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="AWT-Tu-wEO"/>
-                                </constraints>
-                                <items>
-                                    <navigationItem title="Title" id="U5o-lm-XGP">
-                                        <barButtonItem key="leftBarButtonItem" title="戻る" id="QmW-he-Jdt">
-                                            <connections>
-                                                <action selector="pushButton:" destination="BYZ-38-t0r" id="1zV-EV-v83"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YDz-x6-c1l" secondAttribute="bottom" id="2qw-GZ-tHc"/>
-                            <constraint firstItem="EAN-oz-v9v" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="CCi-uZ-4bz"/>
-                            <constraint firstItem="EAN-oz-v9v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GqD-Ja-j8T"/>
-                            <constraint firstAttribute="trailing" secondItem="EAN-oz-v9v" secondAttribute="trailing" id="UMd-ii-0Ck"/>
                             <constraint firstAttribute="trailing" secondItem="YDz-x6-c1l" secondAttribute="trailing" id="jRm-Rg-0xj"/>
                             <constraint firstItem="YDz-x6-c1l" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="o5y-s4-iqc"/>
                             <constraint firstItem="YDz-x6-c1l" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rC8-rl-eV6"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="BpE-qV-Cdt"/>
                     <connections>
                         <outlet property="testImageView" destination="YDz-x6-c1l" id="Phk-bF-QMd"/>
-                        <outlet property="testNavBar" destination="EAN-oz-v9v" id="HRd-hx-inR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="181.33333333333334" y="406.59333333333331"/>
+            <point key="canvasLocation" x="713" y="406"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Q1p-IB-Kap">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b6m-Ua-ZTt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Glg-Ai-qa5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RO5-5o-HEq" kind="relationship" relationship="rootViewController" id="a1z-Za-GR9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="grm-89-6bl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-116" y="406"/>
         </scene>
     </scenes>
 </document>
